@@ -19,7 +19,10 @@ WriteMakefile(
   NAME => 'GraphViz::Makefile',
   VERSION_FROM	=> 'lib/GraphViz/Makefile.pm',
   EXE_FILES => [ glob 'scripts/*' ],
-  PREREQ_PM => {'GraphViz2' => '2.60', 'Make' => '2.004'},
+  PREREQ_PM => {
+    'GraphViz2' => '2.62', # fixed label-quoting
+    'Make' => '2.005', # targets method
+  },
   TEST_REQUIRES => {
     'Test::More' => '1.001002',
     'Test::Snapshot' => '0.06',
